--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Navbar Section-->
-    <header class="w-full bg-black">
+    <header style="background-color:#1A0B2E;" class="w-full">
      <nav class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between relative">
 
         <!-- Logo (ALL devices) -->
@@ -111,6 +111,57 @@
                     <img src="./assets/message.png" alt="Arrow" class="w-auto h-auto">
                     Subscribe
                 </button>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="py-20 bg-[#1a0b2e]">
+        <div class="max-w-7xl mx-auto px-4 text-center">
+
+            <!-- Heading -->
+            <h2 class="text-3xl sm:text-4xl font-bold text-white">
+            About The Podcast
+            </h2>
+
+            <!-- Description -->
+            <p class="mt-4 text-gray-300 max-w-2xl mx-auto">
+                TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.We break down complex topics into digestible insights, explore productivity strategies that actually work,and share stories of personal growth from industry leaders.
+            </p>
+            <p class="mt-4 text-gray-300 max-w-2xl mx-auto">
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+            </p>
+
+            <hr class="mt-10 border-gray-700 opacity-50">
+
+            <!-- Statistics -->
+            <div class="mt-12 grid grid-cols-2 lg:grid-cols-4 gap-6">
+
+                <!-- Stat Item 1 -->
+                <div class="p-6">
+                    <h3 class="text-3xl font-bold text-green-400">150K+</h3>
+                    <p class="mt-2 text-sm text-gray-300">Monthly Listeners</p>
+                </div>
+
+                <!-- Stat Item 2 -->
+                <div class="p-6">
+                    <h3 class="text-3xl font-bold text-green-500">200+</h3>
+                    <p class="mt-2 text-sm text-gray-300">Episodes Published</p>
+                </div>
+
+                <!-- Stat Item 3 -->
+                <div class="p-6">
+                    <h3 class="text-3xl font-bold text-green-500">4.9★</h3>
+                    <p class="mt-2 text-sm text-gray-300">Average Rating</p>
+                </div>
+
+                <!-- Stat Item 4 -->
+                <div class="p-6">
+                    <h3 class="text-3xl font-bold text-green-500">50+</h3>
+                    <p class="mt-2 text-sm text-gray-300">Industry Experts</p>
+                </div>
 
             </div>
 
