--- a/index.html
+++ b/index.html
@@ -168,6 +168,80 @@
         </div>
     </section>
 
+    <!-- Why Choose Section -->
+    <section id="why-choose" class="pb-20 bg-[#1a0b2e]">
+        <div class="max-w-7xl mx-auto px-4">
+
+            <!-- Heading -->
+            <div class="text-center mb-20">
+            <h2 class="text-3xl sm:text-4xl font-bold text-white">
+                Why Choose TechWave
+            </h2>
+            </div>
+
+            <!-- Cards Grid -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+
+                <!-- Card 1 -->
+                <div class="lg:row-span-2 bg-[#24123d] p-6 rounded-xl">
+                    <img src="./assets/headphone.png" class="w-10 mb-6" alt="">
+                    <h3 class="text-xl font-semibold text-white">
+                    Premium Audio Quality
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                    Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms. We eliminate background noise and balance frequencies to ensure every insight is delivered with studio-quality depth and clarity.
+                    </p>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="lg:col-span-2 bg-[#24123d] p-6 rounded-xl">
+                    <img src="./assets/device.png" class="w-10 mb-4" alt="">
+                    <h3 class="text-xl font-semibold text-white">
+                    Mobile Friendly
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                    Listen on the go with seamless mobile experience and offline downloads.
+                    </p>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="lg:col-span-2 bg-[#24123d] p-6 rounded-xl">
+                    <img src="./assets/location.png" class="w-10 mb-4" alt="">
+                    <h3 class="text-xl font-semibold text-white">
+                    Global Community
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                    Connect with tech enthusiasts from over 120 countries worldwide.
+                    </p>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="lg:col-span-2 bg-[#24123d] p-6 rounded-xl">
+                    <img src="./assets/zap-fast.png" class="w-11 mb-4" alt="">
+                    <h3 class="text-xl font-semibold text-white">
+                    Exclusive Interviews
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                    Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+                    </p>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="lg:col-start-3 bg-[#24123d] p-6 rounded-xl">
+                    <img src="./assets/resource.png" class="w-10 mb-4" alt="">
+                    <h3 class="text-xl font-semibold text-white">
+                    Rich Resources
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                    Access show notes, transcripts, and additional learning materials for every episode.
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
 
 
 
