--- a/index.html
+++ b/index.html
@@ -242,7 +242,118 @@
         </div>
     </section>
 
+    <!-- Featured Episodes Section -->
+    <section class="bg-[#1a0b2e] py-10 px-4">
+        <div class="max-w-7xl mx-auto text-center">
+            
+            <!-- Section Heading -->
+            <h2 class="text-3xl md:text-4xl font-bold text-white mb-16">
+            Featured Episodes
+            </h2>
 
+            <!-- Cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+                <!-- Card 1 -->
+                <div class="bg-[#250D44] rounded-2xl overflow-hidden shadow-lg hover:scale-[1.02] transition">
+
+                <!-- Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="relative block">
+                    <img 
+                    src="./assets/Rectangle 1.png" alt="Episode Thumbnail"class="w-full h-48 object-cover"/>
+
+                    <!-- Play Icon Overlay -->
+                    <div class="absolute inset-0 flex items-center justify-center">
+                    <div class="w-14 h-14 bg-[linear-gradient(135deg,rgba(255,215,0,1)_0%,rgba(236,72,153,1)_50%,rgba(168,85,247,1)_100%)] rounded-full flex items-center justify-center text-white">
+                        <img src="./assets/mdi_play.png" alt="">
+                    </div>
+                    </div>
+                </a>
+
+                <!-- Content -->
+                    <div class="p-6 text-left">
+                        <h3 class="text-xl font-semibold text-white mb-2">
+                            The Future of AI in Everyday Life
+                        </h3>
+                        <p class="text-gray-400 text-sm mb-4">
+                            Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.
+                        </p>
+                        <div class="flex items-center gap-2 text-red-500 text-sm font-medium">
+                           <img src="./assets/clock.png" alt="clock" class="w-4 h-4">
+                           <span class="text-green-400">42 min</span>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <!-- Card 2 -->
+                <div class="bg-[#250D44] rounded-2xl overflow-hidden shadow-lg hover:scale-[1.02] transition">
+
+                <!-- Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="relative block">
+                    <img 
+                    src="./assets/Rectangle 1 (1).png"alt="Episode Thumbnail"class="w-full h-48 object-cover"/>
+
+                    <!-- Play Icon Overlay -->
+                    <div class="absolute inset-0 flex items-center justify-center">
+                    <div class="w-14 h-14 bg-[linear-gradient(135deg,rgba(255,215,0,1)_0%,rgba(236,72,153,1)_50%,rgba(168,85,247,1)_100%)] rounded-full flex items-center justify-center text-white">
+                        <img src="./assets/mdi_play.png" alt="">
+                    </div>
+                    </div>
+                </a>
+
+                <!-- Content -->
+                    <div class="p-6 text-left">
+                        <h3 class="text-xl font-semibold text-white mb-2">
+                            Building Better Habits for Remote Work
+                        </h3>
+                        <p class="text-gray-400 text-sm mb-4">
+                            Practical strategies for staying productive and maintaining work-life balance in a remote environment.
+                        </p>
+                        <div class="flex items-center gap-2 text-red-500 text-sm font-medium">
+                           <img src="./assets/clock.png" alt="clock" class="w-4 h-4">
+                           <span class="text-green-400">35 min</span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Card 3 -->
+                <div class="bg-[#250D44] rounded-2xl overflow-hidden shadow-lg hover:scale-[1.02] transition">
+
+                <!-- Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="relative block">
+                    <img 
+                    src="./assets/Rectangle 1 (2).png" alt="Episode Thumbnail" class="w-full h-48 object-cover"/>
+
+                    <!-- Play Icon Overlay -->
+                    <div class="absolute inset-0 flex items-center justify-center">
+                    <div class="w-14 h-14 bg-[linear-gradient(135deg,rgba(255,215,0,1)_0%,rgba(236,72,153,1)_50%,rgba(168,85,247,1)_100%)] rounded-full flex items-center justify-center text-white">
+                        <img src="./assets/mdi_play.png" alt="">
+                    </div>
+                    </div>
+                </a>
+
+                <!-- Content -->
+                    <div class="p-6 text-left">
+                        <h3 class="text-xl font-semibold text-white mb-2">
+                            Career Growth in Tech: A Roadmap
+                        </h3>
+                        <p class="text-gray-400 text-sm mb-4">
+                            Expert advice on navigating your tech career from junior developer to senior leadership roles.
+                        </p>
+                        <div class="flex items-center gap-2 text-red-500 text-sm font-medium">
+                           <img src="./assets/clock.png" alt="clock" class="w-4 h-4">
+                           <span class="text-green-400">51 min</span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
 </body>
