complete challenge section

--- a/index.html
+++ b/index.html
@@ -355,6 +355,72 @@
         </div>
     </section>
 
+    <!-- Host Section -->
+    <section class="py-20 bg-[#1a0b2e]">
+
+        <!-- Section Title -->
+        <div class="text-center mb-16">
+            <h2 class="text-white text-3xl lg:text-4xl font-bold">
+                Meet Your Host
+            </h2>
+        </div>
+    <!-- Container -->
+        <div class="max-w-7xl mx-auto bg-[#250D44] p-10 rounded-2xl">
+
+            <!-- Content Wrapper -->
+            <div class="flex flex-col lg:flex-row items-center">
+
+                <!-- Image Wrapper -->
+                <div class="w-full lg:w-1/4 flex justify-center">
+                    <div class="rounded-2xl overflow-hidden">
+                        <img
+                            src="./assets/host.png"alt="Host Image"class="w-60 h-60 sm:w-50 sm:h-50 lg:w-60 lg:h-60 object-cover"
+                        />
+                    </div>
+                </div>
+
+            <!-- Text Content -->
+            <div class="w-full lg:w-3/4 text-center lg:text-left ">
+
+                <!-- Name -->
+                <h3 class="text-white text-2xl lg:text-3xl font-semibold">
+                Alex Kumar
+                </h3>
+
+                <!-- Bio -->
+                <p class="text-gray-300 mt-6 leading-relaxed]">
+                 Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+                </p>
+
+                <!-- Social Icons -->
+                <div class="flex justify-center lg:justify-start gap-5 mt-8">
+
+                    <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full border border-gray-500/50 hover:border-purple-500 hover:bg-purple-500/10 transition">
+                        <img src="./assets/linkedin.png" alt="Twitter" class="w-5 h-5">
+                    </a>
+
+                    <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full border border-gray-500/50 hover:border-purple-500 hover:bg-purple-500/10 transition">
+                        <img src="./assets/x.png" alt="LinkedIn" class="w-5 h-5">
+                    </a>
+
+                    <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full border border-gray-500/50 hover:border-purple-500 hover:bg-purple-500/10 transition">
+                        <img src="./assets/instagram.png" alt="Instagram" class="w-5 h-5">
+                    </a>
+
+                    <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full border border-gray-500/50 hover:border-purple-500 hover:bg-purple-500/10 transition">
+                        <img src="./assets/youtube.png" alt="Instagram" class="w-5 h-5">
+                    </a>
+
+                </div>
+
+            </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
 
 </body>
 </html>
