solve footer problem

--- a/index.html
+++ b/index.html
@@ -473,11 +473,10 @@
 
             <!-- Copyright -->
             <p class="text-gray-400 text-sm">
-            © 2026 TechWave. All rights reserved.
+            © 2026 TechWave Podcast. All rights reserved.
             </p>
 
         </div>
     </footer>
-
 </body>
 </html>
