--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="icon" type="image/x-icon" href="./assets/hero-circle.png">
     <link rel="stylesheet" href="tailwind.init.css">
     <title>TechWave</title>
     <style type="text/tailwindcss">
